# libfqfft

./: .bazelrc  .gitignore  .gitmodules  README.md  WORKSPACE
bzl/config/: BUILD.bazel  vars.bzl
bzl/tools/: user.bazelrc
libfqfft/evaluation_domain/: BUILD.bazel
libfqfft/kronecker_substitution/: BUILD.bazel
libfqfft/tests/: BUILD.bazel
test/: BUILD.bazel
