load("@rules_cc//cc:defs.bzl", "cc_library")
load("@libfqfft//bzl/config:vars.bzl", "DLIBGMP")

cc_library(
    name = "kronecker_substitution",
    visibility = ["//visibility:public"],
    include_prefix = "libfqfft/kronecker_substitution",
    hdrs = ["kronecker_substitution.hpp",
            "kronecker_substitution.tcc"],
    defines = DLIBGMP,
    deps = [
        "@libff//libff",
        "//bzl/external/libgmp"
    ]
)
